# TrafficSimulation-Project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  setup_project.ps1  vcpkg.json
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  MyProject.sln  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  symlink_compile_commands.vcxproj  symlink_compile_commands.vcxproj.filters
build-msvc/src/: MyProject_app.vcxproj  MyProject_app.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-msvc/src/MyProject_app.dir/RelWithDebInfo/: MyProject_app.exe.recipe  MyProject_app.ilk
build-msvc/src/MyProject_app.dir/RelWithDebInfo/MyProject_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  MyProject_app.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/test/: CTestTestfile.cmake  MyProject_tests-b12d07c_include.cmake  MyProject_tests-b12d07c_tests.cmake  MyProject_tests.vcxproj  MyProject_tests.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-msvc/test/MyProject_tests.dir/RelWithDebInfo/: MyProject_tests.exe.recipe
build-msvc/test/MyProject_tests.dir/RelWithDebInfo/MyProject_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  MyProject_tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/x64/RelWithDebInfo/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-msvc/x64/RelWithDebInfo/ZERO_CHECK/: ZERO_CHECK.recipe
build-msvc/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-msvc/x64/RelWithDebInfo/symlink_compile_commands/symlink_.11D05DC9.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  symlink_compile_commands.lastbuildstate
cmake/: dependencies.cmake  project-options.cmake  project-targets.cmake  project-warnings.cmake  testing.cmake  vcpkg-root-finder.cmake
src/: CMakeLists.txt  app_utility.cpp  app_utility.hpp  bike.cpp  bike.hpp  building.cpp  building.hpp  camera.cpp  camera.hpp  car.cpp  car.h  car.hpp  double_road.cpp  double_road.hpp  environment_manager.cpp  environment_manager.hpp  file_parse.cpp  file_parse.hpp  junction.cpp  junction.hpp  main.cpp  map_data.txt  pathfinder.cpp  pathfinder.hpp  road.cpp  road.h  road.hpp  traffic_light.cpp  traffic_light.hpp  traffic_map.cpp  traffic_map.hpp  truck.cpp  truck.hpp  urban_element.cpp  urban_element.hpp  ux.cpp  ux.hpp
test/: CMakeLists.txt  test_main.cpp
